Fix inconsistent scrollbar behavior by removing fixed headers and just having one scroll body for each page

--- a/app/javascript/react/screens/App/App.scss
+++ b/app/javascript/react/screens/App/App.scss
@@ -11,3 +11,17 @@
 .required-asterisk {
   color: $color-pf-red-100;
 }
+
+.main-scroll-container {
+  height: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
+  margin-left: -20px;
+  margin-right: -20px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.main-body-content {
+  margin-bottom: 20px;
+}
